kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: workout-motivator-frontend
  namespace: workout-motivator
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: workout-motivator-frontend
